--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,17 @@ body {
 
 .input-container {
     margin-top: 2vh;
+    display: flex;
+    justify-content: center;
+}
+
+.input-container input {
+    font-size: large;
+    min-width: -webkit-fill-available;
+}
+
+.input-container button {
+    font-size: large;
 }
 
 .alert {
